# spock

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/geo2d/: CMakeLists.txt  edge.h  intersect.cpp  intersect.h  ray.h  rect.h  triangle.cpp  triangle.h  util.h
src/geo3d/: CMakeLists.txt  aabb.h  edge.h  intersect.cpp  intersect.h  plane.h  ray.h  triangle.cpp  triangle.h  util.h
src/spock/: CMakeLists.txt  device.cpp  device.h  instance.cpp  instance.h  queue.cpp  queue.h  surface.cpp  surface.h
src/util/: CMakeLists.txt  taskpool.h
